--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
 <div id="phaser-example"></div>
 
-<script type="text/javascript">
-
-</script>
+<a href="https://github.com/dragon0/gemmatch.js">code</a>
 
 </body>
 </html>
